fix: remove filename bug
