# dobriy-react-app/gen/api/src/models/index.ts
@@ -1,5 +1,2 @@
 export * from './ErrorResponse';
-export * from './Film';
-export * from './FilmEvent';
 export * from './ModelMap';
-export * from './User';
